# tox-tcp-tunnel

./: .clang-format  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  coverage.yml  docs.yml  pr-check.yml
cli/: main.cpp
docs/: ADVANCED_SCENARIOS.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  DATABASE_TUNNELING.md  HTTP_TUNNELING.md
docs/plans/: 2026-03-19-lan-bootstrap-design.md  2026-03-19-lan-bootstrap-implementation.md  2026-03-19-ssh-over-toxtunnel-repair-design.md  2026-03-19-ssh-over-toxtunnel-repair.md
docs/superpowers/plans/: 2026-03-18-tcp-tunnel-cpp-rewrite.md
docs/superpowers/specs/: 2026-03-18-tcp-tunnel-over-tox-cpp-design.md
include/toxtunnel/app/: rules_engine.hpp  stdio_pipe_bridge.hpp  tunnel_client.hpp  tunnel_server.hpp
include/toxtunnel/core/: io_context.hpp  tcp_connection.hpp  tcp_listener.hpp
include/toxtunnel/tox/: bootstrap_source.hpp  tox_adapter.hpp  tox_connection.hpp  tox_save.hpp  tox_thread.hpp  types.hpp
include/toxtunnel/tunnel/: protocol.hpp  tunnel.hpp  tunnel_manager.hpp
include/toxtunnel/util/: circular_buffer.hpp  config.hpp  error.hpp  expected.hpp  logger.hpp
src/: placeholder.cpp
src/app/: rules_engine.cpp  stdio_pipe_bridge.cpp  tunnel_client.cpp  tunnel_server.cpp
src/core/: io_context.cpp  tcp_connection.cpp  tcp_listener.cpp
src/tox/: bootstrap_source.cpp  tox_adapter.cpp  tox_connection.cpp  tox_save.cpp  tox_thread.cpp  types.cpp
src/tunnel/: protocol.cpp  tunnel.cpp  tunnel_manager.cpp
src/util/: config.cpp  error.cpp  logger.cpp
tests/: CMakeLists.txt
tests/integration/: test_config_pipeline.cpp  test_http_scenarios.cpp  test_pipe_bridge.cpp  test_rules_integration.cpp  test_tcp_loopback.cpp  test_tunnel_data_flow.cpp
tests/unit/: placeholder_test.cpp  test_bootstrap_source.cpp  test_circular_buffer.cpp  test_config.cpp  test_expected.cpp  test_pipe_mode.cpp  test_rules_engine.cpp  test_tox_adapter.cpp  test_tunnel.cpp  test_tunnel_manager.cpp
